--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=locahost\\SQLEXPRESS;Database=GtUnderground;User Id=GtUnderground;Password=Hadouken420;Integrated Security=False;MultipleActiveResets=True;TrustServerCertificate=True"
+  },
   "JwtSettings": {
     "SecurityKey": "MySecurityKey",
     "Issuer": "MyIssuer",
