Added registration page
-Fixed error message bug on login form:
Interpolation requires backticks not apostraphes.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,14 @@
 .vs/gT_Underground/FileContentIndex/f7bb724f-d0e9-4e4b-92f1-9e4dededa7a2.vsidx
 .vs/gT_Underground/v17/.suo
 .vs/slnx.sqlite
+/.vs/gT_Underground/FileContentIndex/f2900ac0-329b-4e7a-a01c-fbc515a29404.vsidx
+/.vs/gT_Underground/FileContentIndex/5f25e16d-bdd4-4808-86c3-5758c8c6764c.vsidx
+/.vs/gT_Underground/FileContentIndex/5da2b7f3-2ce2-43bf-a50e-5e9c87ae060f.vsidx
+/.vs/gT_Underground/FileContentIndex/3cbf353e-1d0b-4fed-ac0f-af114a97d587.vsidx
+/.vs/gT_Underground/FileContentIndex/32d057b8-b9df-498e-9bd0-966e89326c57.vsidx
+/.vs/gT_Underground/FileContentIndex/1ef5818c-fe2c-4c46-b696-fb50175daba4.vsidx
+/.vs/gT_Underground/FileContentIndex/224ef47d-92d5-4424-bb5a-b6cd947ad004.vsidx
+/.vs/gT_Underground/v17/.suo
+/.vs/gT_Underground/FileContentIndex/f2900ac0-329b-4e7a-a01c-fbc515a29404.vsidx
+/.vs/gT_Underground/FileContentIndex/3cbf353e-1d0b-4fed-ac0f-af114a97d587.vsidx
+/.vs/gT_Underground/FileContentIndex/1ef5818c-fe2c-4c46-b696-fb50175daba4.vsidx
