Registration flow works. Login only works with username, should clarify.

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@
 /gT_UndergroundAPI/obj/Debug/net6.0/gT_UndergroundAPI.pdb
 /gT_UndergroundAPI/obj/Debug/net6.0/gT_UndergroundAPI.dll
 /gT_UndergroundAPI/obj/Debug/net6.0/gT_UndergroundAPI.csproj.CoreCompileInputs.cache
+/.vs/gT_Underground/FileContentIndex/d3cd61af-0696-470d-8257-6e2cf1cab0c2.vsidx
+/.vs/gT_Underground/FileContentIndex/6228adde-650a-4b8e-8484-b77cf56ea607.vsidx
