Password error messages are good enough.

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,25 @@
 /gT_UndergroundAPI/obj/Debug/net6.0/gT_UndergroundAPI.csproj.CoreCompileInputs.cache
 /.vs/gT_Underground/FileContentIndex/d3cd61af-0696-470d-8257-6e2cf1cab0c2.vsidx
 /.vs/gT_Underground/FileContentIndex/6228adde-650a-4b8e-8484-b77cf56ea607.vsidx
+/.vs/gT_Underground/FileContentIndex/cc7ef5c1-d938-4d39-b991-f40f299268a9.vsidx
+/.vs/gT_Underground/FileContentIndex/b6974d52-41aa-4757-a601-ac7736bf1bd0.vsidx
+/.vs/gT_Underground/FileContentIndex/b374f4db-1156-46f8-b70e-cb758d583dca.vsidx
+/.vs/gT_Underground/FileContentIndex/a35574f7-5126-465c-aa5d-675315278174.vsidx
+/.vs/gT_Underground/FileContentIndex/9ddc4028-53be-41d5-bf98-cf324026d83c.vsidx
+/.vs/gT_Underground/FileContentIndex/3a67f4c2-e1ce-40c9-a74c-5961c61b8145.vsidx
+/.vs/gT_Underground/FileContentIndex/19e9871e-f93f-4e1f-9e93-cb9a1b859102.vsidx
+/.vs/gT_Underground/FileContentIndex/14179227-400c-4f25-ae54-028421cc077b.vsidx
+/.vs/gT_Underground/FileContentIndex/99c70bf2-e49e-4ea0-91ee-05350980b7eb.vsidx
+/.vs/gT_Underground/FileContentIndex/b6974d52-41aa-4757-a601-ac7736bf1bd0.vsidx
+/.vs/gT_Underground/FileContentIndex/b374f4db-1156-46f8-b70e-cb758d583dca.vsidx
+/.vs/gT_Underground/FileContentIndex/a35574f7-5126-465c-aa5d-675315278174.vsidx
+/.vs/gT_Underground/FileContentIndex/14179227-400c-4f25-ae54-028421cc077b.vsidx
+/.vs/gT_Underground/FileContentIndex/e47be668-5076-49b0-b344-5dba154f288f.vsidx
+/.vs/gT_Underground/FileContentIndex/a865cf5c-dec1-4baa-a966-95c44648d07e.vsidx
+/.vs/gT_Underground/FileContentIndex/8deedfe0-99c1-43ba-aa3f-0c0863e31d9a.vsidx
+/.vs/gT_Underground/FileContentIndex/4efbbe07-4032-4257-9b58-6384b3b7cb46.vsidx
+/gT_UndergroundAPI/obj/Debug/net6.0/gT_UndergroundAPI.csproj.AssemblyReference.cache
+/.vs/gT_Underground/FileContentIndex/f81912f8-c97d-477c-ad5c-cb9f9e2c874a.vsidx
+/.vs/gT_Underground/FileContentIndex/c191be79-91ca-4962-859b-a68bdbbd0628.vsidx
+/.vs/gT_Underground/FileContentIndex/4ce1b69f-2c7a-49e8-82ed-22492a7f0ae2.vsidx
+/.vs/gT_Underground/FileContentIndex/0569eba2-cf0d-403e-814a-5861f0914719.vsidx
