Remove .vs folder from git

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@
 /.vs/gT_Underground/FileContentIndex/c191be79-91ca-4962-859b-a68bdbbd0628.vsidx
 /.vs/gT_Underground/FileContentIndex/4ce1b69f-2c7a-49e8-82ed-22492a7f0ae2.vsidx
 /.vs/gT_Underground/FileContentIndex/0569eba2-cf0d-403e-814a-5861f0914719.vsidx
+/.vs/gT_Underground/FileContentIndex
